@@ -22,7 +22,8 @@ o [NSE] Added tls-nextprotoneg script which enumerates a TLS server's supported
 
 o [NSOCK] Fixed an epoll-engine-specific bug. The engine didn't recognized FDs
   that were internally closed and replaced by other ones. This happened during
-  reconnect attempts. [Henri Doreau]
+  reconnect attempts. Also, the IOD flags were not properly cleared.
+  [Henri Doreau, Daniel Miller]
 
 o Added support for log type bitmasks in log_vwrite(). Also replaced a fatal()
   statement by an assert(0) to get rid of a possible infinite call loop when
